WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283858
Clear floats even when they are not tracked by a previous sibling
https://bugs.webkit.org/show_bug.cgi?id=283858
Summary
Clear floats even when they are not tracked by a previous sibling
Ahmad Saleem
Reported
2024-11-30 14:27:28 PST
Hi Team, While going through Blink's failing test case, I came across another one. Test Case:
https://jsfiddle.net/nfeLqtcp/
^ WebKit ToT fails while Chrome Canary 134 and Firefox Nightly 135 passes. Blink Commit:
https://source.chromium.org/chromium/chromium/src/+/24bc38bac8c8f2ca1ee61b8872829fcdde521fa3
WebKit Source:
https://github.com/WebKit/WebKit/blob/41119b0d8c29c266ab376751e2bbca3aa74c6776/Source/WebCore/rendering/RenderBlockFlow.cpp#L244
Just raising so we can fix it. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-30 14:27:37 PST
<
rdar://problem/140733421
>
Ahmad Saleem
Comment 2
2024-11-30 14:35:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37279
EWS
Comment 3
2024-11-30 19:39:17 PST
Committed
287185@main
(7b4f87a05484): <
https://commits.webkit.org/287185@main
> Reviewed commits have been landed. Closing PR #37279 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug