Clear floats even when they are not tracked by a previous sibling

https://bugs.webkit.org/show_bug.cgi?id=283858
rdar://140733421

Reviewed by Alan Baradlay.

Merge: https://source.chromium.org/chromium/chromium/src/+/24bc38bac8c8f2ca1ee61b8872829fcdde521fa3

This patch fixes up case where the margin collapsing has moved us up to past the top
a previous sibling than we need to check for floats from the parent too and clear floats.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::rebuildFloatingObjectSetFromIntrudingFloats):
* LayoutTests/fast/block/float/block-with-negative-margin-clears-float.html: Add Test Case
* LayoutTests/fast/block/float/block-with-negative-margin-clears-float-expected.txt: Add Test Case Expectation

Canonical link: https://commits.webkit.org/287185@main